--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <h2>This includes building a datasource for:</h2>
     <ul>
         <li>Each candidate on each ballot</li>
-        <li>Each candidate's positions</li>
+        <li>Each candidate&#39;s positions</li>
         <li>Evidence for each position</li>
         <li>Evidence against each position</li>
-        <li>Each candidate’s voting record</li>
-        <li>Each candidate’s financing</li>
+        <li>Each candidate&#39;s voting record</li>
+        <li>Each candidate&#39;s financing</li>
     </ul>
     <p>The job can be done from anywhere in the world that has a computer with an internet connection that can push to Github (almost all can).</p>
 
