--- a/index.html
+++ b/index.html
@@ -9,29 +9,36 @@
         <header><h1>The Imaginary Jobs Program</h1></header>
         <h2>Imagine real work</h2>
         <ul>
-            <li>Voters lack confidence.</li>
+            <li>Voters lack confidence in Democracy.</li>
             <li>Communication is failing.</li>
+                <ul>
+                    <li>Miscommunication is regular.</li>
+                    <li>"Fake News" pervades social media.</li>
+                    <li>Mainstream media is not generally trusted.</li>
+                    <li>Honest unbiased information is not readily available.</li>
+                </ul>
             <li>Most jobs seem meaningless.</li>
             <li>Problems need solving.</li>
         </ul>
         <h2>We have made jobs to solve these problems:</h2>
         <ul>
-            <li>Street activism</li>
-            <li>Non-partisan information to inform voters</li>
-            <li>Social media</li>
-            <li>Media making</li>
+            <li>Street Activism</li>
+            <li>Non-partisan Information For Voters</li>
+            <li>Social Media</li>
+            <li>Media Production</li>
             <li>Computer Programming</li>
+            <li>And more jobs on the way!</li>
         </ul>
-        <h2>Agreements</h2>
+        <h2>Mutual Agreements</h2>
         <ol>
             <li>We limit our work to peaceful work.</li>
             <li>We avoid conflict with the law.</li>
-            <li>We strive to only make welcome contact with others.</li>
-            <li>We create opportunities to be pulled.</li>
-            <li>We strive to provide services that are wanted.</li>
+            <li>We strive only to make welcome contact with others.</li>
+            <li>We create opportunities to be <i>pulled</i> to service.</li>
+            <li>We strive to provide services that are wanted and benefitted from.</li>
             <li>All media we generate goes to the Public Domain.</li>
-            <li>We share and compare evidence in decision making.</li>
-            <li>Shaming or humiliating are not our way.</li>
+            <li>We share and compare evidence in decision-making.</li>
+            <li>Shaming and humiliating are not our way.</li>
             <li>We do not subject volunteers to work they do not believe in.</li>
             <li>Prioritizing the work personally believed to be most meaningful ahead of the work believed to be less meaningful as part of a contemporary solution for morale problems.</li>
             <li>Our work is not-for-profit.</li>
@@ -39,7 +46,7 @@
             <li>We are a non-partisan organization that mediates contexts for diverse perspectives and open dialogue.</li>
         </ol>
         <h2>Your first imaginary job:</h2>
-        <p>Currently we are taking applications for the Informed Citizens Alliance job of Election Information Researcher where we are creating non-partisan information about the candidates for elections wherever our volunteers are.</p>
+        <p>Currently we are taking applications for the Ballot Knowledge Network job of Ballot Knowledge Analyst where we are creating non-partisan information about the candidates for elections wherever our volunteers are.</p>
         <h2>This includes building a datasource for:</h2>
         <ul>
             <li>Each candidate on each ballot</li>
@@ -47,9 +54,9 @@
             <li>Evidence for each position</li>
             <li>Evidence against each position</li>
             <li>Each candidate&#39;s voting record</li>
-            <li>Each candidate&#39;s financing</li>
+            <li>Each candidate&#39;s financing “sources”</li>
         </ul>
-        <p>The job can be done from anywhere in the world that has a computer with an internet connection that can push to Github (almost all can).</p>
+        <p>The job can be done from anywhere in the world with a computer and an internet connection that can push to Github (almost all can).</p>
     </div>
 </body>
 
